<resources>
    <string name="app_name">Beltron Order Archive</string>
    <string name="Share">Share</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>
    <string name="Settings">Settings</string>
    <string name="search_here">Search by Order ID…</string>
    <string name="search_your_order">Search Your Order</string>
    <string name="Login">Login</string>
    <string name="user_id">Email…</string>
    <string name="password">Password…</string>
    <string name="login">LOGIN</string>
    <string name="recent_searches">Recently Searched</string>
    <string name="will_be_displayed_here">No Recent Searches…</string>
    <string name="about_section">Welcome to BELTRON APP, which is an Order Archive System. This App Helps in Saving &amp; Retrieving Order Histories &amp; Payment Dues.</string>
    <string name="about_section2">This App is Designed, Developed and Tested by Team of 6 students from Bakhtiyarpur College of Engineering Under Vocational Training Session at Beltron. Team included Pandey Rahul Kumar, Mukund Kumar, Shiv Saurabh, Rajnikant Pandey, Rupesh Kr Nirala &amp; Vikash Bhushan, as members. </string>
    <string name="logout">LogOut</string>
    <string name="about">About</string>
    <string name="user_details">User Details</string>
    <string name="will_appear_here">Will Appear Here…</string>
    <string name="create_an_order_history">Create an Order History</string>
    <string name="search_an_order">Search an Order</string>
    <string name="order_id">ORDER ID :</string>
    <string name="seller_info">SELLER INFO :</string>
    <string name="order_date">ORDER DATE :</string>
    <string name="order_description">ORDER DESCRIPTION :</string>
    <string name="order_amount">ORDER AMOUNT :</string>
    <string name="payment_due">PAYMENT DUE :</string>
    <string name="upload_order_receipt">Upload Order Receipt</string>
    <string name="submit">Submit</string>
    <string name="order_details">Order Details Saved.</string>
    <string name="view_order_details">View Order Details</string>
    <string name="new_user_signup">New User ? SignUp</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="passwrd">Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="signup">SignUp</string>
    <string name="beltron_login">BELTRON Login</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="registered_email">Registered Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="login_hint">Login into your account to search or create an order history</string>
    <string name="add_order_icon">Add Order Icon</string>
    <string name="sort_by_icon">Sort by Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_order">Update Order</string>
    <string name="order_head">Order Details</string>
    <string name="orderid">Order ID :</string>
    <string name="orderId">Order ID:</string>
    <string name="placeholder">Not Found</string>
    <string name="select_field">Select Field to Update</string>
    <string name="select_field_to_update">Select Field to Update</string>
    <string name="sort_by">Sort by</string>
    <string name="update">Update</string>
    <string name="enter_new_value">Enter New Value...</string>
    <string name="home">Home</string>
    <string-array name="update_field">
        <item>Choose Field</item>
        <item>Seller Info</item>
        <item>Order Description</item>
        <item>Payment Due</item>
        <item>Order Date</item>
    </string-array>
</resources>
