<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.rahul.app6.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="BELTRON APP"
        app:titleMarginStart="40dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/new_user_signup"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView15"
        android:layout_toStartOf="@+id/textView15"
        android:fontFamily="@font/amaranth"
        android:text="@string/name"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText10"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/textView15"
        android:layout_toStartOf="@+id/textView15"
        android:fontFamily="@font/amaranth"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView17"
        android:layout_alignStart="@+id/textView17"
        android:layout_below="@+id/editText11"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/passwrd"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_below="@+id/editText12"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/confirm_password"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText11"
        android:layout_alignStart="@+id/editText11"
        android:layout_alignTop="@+id/textView16"
        android:background="@drawable/edtext_outline"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignLeft="@+id/editText12"
        android:layout_alignStart="@+id/editText12"
        android:background="@drawable/edtext_outline"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView18"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/textView18"
        android:layout_toRightOf="@+id/textView18"
        android:background="@drawable/edtext_outline"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView19"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/edtext_outline"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText13"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_outline"
        android:fontFamily="@font/amaranth"
        android:padding="10dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:onClick="signUp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>
